--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=todo list api
+spring.datasource.url=jdbc:mysql://localhost:3306/todo_list_db
+spring.datasource.username=app_user
+spring.datasource.password=app_password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
